# ARIMA

./: .gitignore  CMakeLists.txt  README.md
include/: TimeSeriesData.h
src/: ModelOptimizer.cpp  TimeSeriesData.cpp  main.cpp
